--- a/HelloWorld.html
+++ b/HelloWorld.html
@@ -1,11 +1,38 @@
-<p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-    Eum reiciendis ab rerum! Aliquam nihil vitae exercitationem unde quas neque cupiditate autem, 
-    ipsum asperiores tempora dicta deleniti dolor quod soluta aut.
-</p>
+<!DOCTYPE HTML/>
+<HTML>
+    <HEAD>
+        <title>Giant Clam</title>
+    </HEAD>
+<body>
+    <h1>Giant Glam</h1>
 
-<p>
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-    Cumque saepe consequatur quibusdam, aliquid minima minus. 
-    Sapiente perferendis eius laudantium a, laboriosam iusto, magni distinctio nam quas iste totam ipsam voluptas?
-</p>
+    <h2>Anatomy</h2>
+
+    <p>
+        Young T. gigas are difficult to distinguish from other species of Tridacninae. 
+        Adult T. gigas are the only giant clams unable to close their shells completely, 
+        allowing part of the brownish-yellow mantle to remain visible.
+    </p>
+
+
+    <h3>Largest Specimens</h3>
+
+    <p>
+        The largest known T. gigas specimen measured 137 centimetres (4 ft 6 in), and it weighed 230 kg (510 lb) dead and was estimated to be 250 kg (550 lb) alive.
+        It was discovered around 1817 on the north western coast of Sumatra, Indonesia, and its shells are now on display in a museum in Northern Ireland.
+    </p>
+
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Eum reiciendis ab rerum! Aliquam nihil vitae exercitationem unde quas neque cupiditate autem, 
+        ipsum asperiores tempora dicta deleniti dolor quod soluta aut.
+    </p>
+
+    <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+        Cumque saepe consequatur quibusdam, aliquid minima minus. 
+        Sapiente perferendis eius laudantium a, laboriosam iusto, magni distinctio nam quas iste totam ipsam voluptas?
+    </p>
+</body>
+</HTML>
+
