Commiting text elements

--- a/HelloWorld.html
+++ b/HelloWorld.html
@@ -1,8 +1,8 @@
-<!DOCTYPE HTML/>
-<HTML>
-    <HEAD>
-        <title>Giant Clam</title>
-    </HEAD>
+<!DOCTYPE html/>
+<html>
+    <head>
+        <title>Giant Clams!!!</title>
+    </head>
 <body>
     <h1>Giant Glam</h1>
 
@@ -34,5 +34,5 @@
         Sapiente perferendis eius laudantium a, laboriosam iusto, magni distinctio nam quas iste totam ipsam voluptas?
     </p>
 </body>
-</HTML>
+</html>
 
